Add missing sound and subtitle for milking a moobloom. 1.1.1

--- a/src/main/resources/assets/charmony-mooblooms/lang/en_us.json
+++ b/src/main/resources/assets/charmony-mooblooms/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "entity.charmony-mooblooms.moobloom": "Moobloom"
+  "entity.charmony-mooblooms.moobloom": "Moobloom",
+  "subtitles.charmony-mooblooms.milk_moobloom": "Moobloom milked"
 }
