Fix spawn egg texture

--- a/src/main/resources/assets/charmony-mooblooms/lang/en_us.json
+++ b/src/main/resources/assets/charmony-mooblooms/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "entity.charmony-mooblooms.moobloom": "Moobloom",
+  "item.charmony-mooblooms.moobloom_spawn_egg": "Moobloom Spawn Egg",
   "subtitles.charmony-mooblooms.milk_moobloom": "Moobloom milked"
 }
